--- a/input-examples.html
+++ b/input-examples.html
@@ -61,6 +61,10 @@
         <div class="page-header" id="testes">
             <h2>Funções compatíveis</h2>
 
+            <div class="alert alert-success">
+                <p class="text-justify"><strong>Dica:</strong> Copie as tabelas, incluindo a linha com o nome das colunas, e use-as como rótulo na página inicial e veja o resultado!</p>
+            </div>
+
             <h3 class="text-center">Equações matemáticas</h3>
 
             <p class="text-justify">Aqui temos algumas linhas de entradas criadas por funções, usadas para testar os algoritmos:</p>
@@ -224,7 +228,30 @@
                 <div class="col-md-4">
                     <p><table align="center" style="width:260px">
                         <tr><th>n</th><th>T</th><th>v</th><th>P</th></tr>
-                        <tr><td>15</td><td>1</td><td>0.540</td><td>8.104</td></tr>
+                        <tr><td>360</td><td>50</td><td>120</td><td>1247.1897</td></tr>
+                        <tr><td>164</td><td>150</td><td>190</td><td>1076.52163579</td></tr>
+                        <tr><td>353</td><td>125</td><td>220</td><td>1667.64380341</td></tr>
+                        <tr><td>220</td><td>45</td><td>10</td><td>8231.45202</td></tr>
+                        <tr><td>444</td><td>15</td><td>80</td><td>692.1902835</td></tr>
+                        <tr><td>24</td><td>290</td><td>230</td><td>251.606965565</td></tr>
+                        <tr><td>297</td><td>270</td><td>100</td><td>6667.4761362</td></tr>
+                        <tr><td>73</td><td>175</td><td>140</td><td>758.7070675</td></tr>
+                        <tr><td>423</td><td>120</td><td>180</td><td>2344.716636</td></tr>
+                        <tr><td>269</td><td>90</td><td>60</td><td>3354.940293</td></tr>
+                        <tr><td>416</td><td>285</td><td>130</td><td>7582.913376</td></tr>
+                        <tr><td>339</td><td>65</td><td>50</td><td>3664.2433386</td></tr>
+                        <tr><td>458</td><td>80</td><td>200</td><td>1523.2343536</td></tr>
+                        <tr><td>395</td><td>145</td><td>70</td><td>6803.12286357</td></tr>
+                        <tr><td>10</td><td>30</td><td>170</td><td>14.67282</td></tr>
+                        <tr><td>283</td><td>95</td><td>240</td><td>931.408196792</td></tr>
+                        <tr><td>451</td><td>205</td><td>210</td><td>3660.60075281</td></tr>
+                        <tr><td>94</td><td>230</td><td>110</td><td>1634.19644327</td></tr>
+                        <tr><td>437</td><td>185</td><td>20</td><td>33609.6837655</td></tr>
+                        <tr><td>409</td><td>250</td><td>160</td><td>5313.54778438</td></tr>
+                        <tr><td>255</td><td>170</td><td>30</td><td>12014.59411</td></tr>
+                        <tr><td>332</td><td>70</td><td>150</td><td>1288.20838347</td></tr>
+                        <tr><td>122</td><td>140</td><td>40</td><td>3550.333346</td></tr>
+                        <tr><td>66</td><td>235</td><td>90</td><td>1432.88238867</td></tr>
                         <caption class="text-center">Lei dos gases ideais:<br>P = n&middot;R&middot;T/v</caption>
                     </table></p>
                 </div>
@@ -244,9 +271,73 @@
                         <tr><td>100</td><td>10</td><td>9.09</td></tr>
                         <tr><td>100</td><td>50</td><td>1.96</td></tr>
                         <tr><td>20</td><td>1000</td><td>19.61</td></tr>
+                        <tr><td>60</td><td>125</td><td>40.54</td></tr>
+                        <tr><td>20</td><td>30</td><td>12.0</td></tr>
+                        <tr><td>140</td><td>55</td><td>39.49</td></tr>
+                        <tr><td>130</td><td>135</td><td>66.23</td></tr>
+                        <tr><td>170</td><td>95</td><td>60.94</td></tr>
+                        <tr><td>40</td><td>60</td><td>24.0</td></tr>
+                        <tr><td>90</td><td>145</td><td>55.53</td></tr>
+                        <tr><td>30</td><td>35</td><td>16.15</td></tr>
+                        <tr><td>10</td><td>50</td><td>8.33</td></tr>
+                        <tr><td>80</td><td>115</td><td>47.18</td></tr>
+                        <tr><td>110</td><td>80</td><td>46.32</td></tr>
+                        <tr><td>100</td><td>75</td><td>42.86</td></tr>
+                        <tr><td>150</td><td>120</td><td>66.67</td></tr>
+                        <tr><td>180</td><td>105</td><td>66.32</td></tr>
                         <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
                     </table>
                 </p></div>
+
+                <div class="col-lg-4">
+                    <p><table align="center" style="width:195px">
+                        <tr><th>a</th><th>b</th><th>c</th></tr>
+                        <tr><td>148</td><td>25</td><td>150.096635539</td></tr>
+                        <tr><td>140</td><td>125</td><td>187.683243791</td></tr>
+                        <tr><td>52</td><td>40</td><td>65.6048778674</td></tr>
+                        <tr><td>132</td><td>10</td><td>132.378245947</td></tr>
+                        <tr><td>72</td><td>30</td><td>78.0</td></tr>
+                        <tr><td>92</td><td>100</td><td>135.882302012</td></tr>
+                        <tr><td>142</td><td>65</td><td>156.169779407</td></tr>
+                        <tr><td>80</td><td>20</td><td>82.4621125124</td></tr>
+                        <tr><td>10</td><td>70</td><td>70.7106781187</td></tr>
+                        <tr><td>44</td><td>130</td><td>137.244307714</td></tr>
+                        <tr><td>120</td><td>85</td><td>147.054411699</td></tr>
+                        <tr><td>68</td><td>75</td><td>101.237344888</td></tr>
+                        <tr><td>30</td><td>95</td><td>99.6242942259</td></tr>
+                        <tr><td>62</td><td>45</td><td>76.6093989012</td></tr>
+                        <tr><td>70</td><td>120</td><td>138.924439894</td></tr>
+                        <tr><td>32</td><td>135</td><td>138.740765458</td></tr>
+                        <tr><td>22</td><td>55</td><td>59.2368128785</td></tr>
+                        <tr><td>88</td><td>80</td><td>118.928549979</td></tr>
+                        <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>)</caption>
+                    </table></p>
+                </div>
+
+                <div class="col-md-4">
+                    <p><table align="center" style="width:260px">
+                        <tr><th>L</th><th>T</th></tr>
+                        <tr><td>120</td><td>21.98</td></tr>
+                        <tr><td>110</td><td>21.04</td></tr>
+                        <tr><td>90</td><td>19.03</td></tr>
+                        <tr><td>60</td><td>15.54</td></tr>
+                        <tr><td>100</td><td>20.06</td></tr>
+                        <tr><td>40</td><td>12.69</td></tr>
+                        <tr><td>170</td><td>26.16</td></tr>
+                        <tr><td>70</td><td>16.79</td></tr>
+                        <tr><td>140</td><td>23.74</td></tr>
+                        <tr><td>10</td><td>6.34</td></tr>
+                        <tr><td>150</td><td>24.57</td></tr>
+                        <tr><td>80</td><td>17.95</td></tr>
+                        <tr><td>30</td><td>10.99</td></tr>
+                        <tr><td>130</td><td>22.88</td></tr>
+                        <tr><td>50</td><td>14.19</td></tr>
+                        <tr><td>160</td><td>25.38</td></tr>
+                        <tr><td>180</td><td>26.92</td></tr>
+                        <tr><td>20</td><td>8.97</td></tr>
+                        <caption class="text-center">Período pendular:<br>T = 2&middot;&pi;&middot;&radic;(L/g)</caption>
+                    </table></p>
+                </div>
 
                 <div class="col-lg-4"><p>
                     <table align="center" style="width:260px">
@@ -255,14 +346,6 @@
                     </table>
                 </p></div>
 
-                <div class="col-lg-4">
-                    <p><table align="center" style="width:195px">
-                        <tr><th>a</th><th>b</th><th>c</th></tr>
-                        <tr><td>150</td><td>1</td><td>150</td></tr>
-                        <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>)</caption>
-                    </table></p>
-                </div>
-
                 <div class="col-lg-4"><p>
                     <table align="center" style="width:195px">
                         <tr><th>a</th><th>b</th><th>c</th><th>x0</th></tr>
@@ -270,20 +353,12 @@
                         <caption class="text-center">Fórmula de Bhaskara:<br>(-b&#8723;&radic;(b<sup>2</sup>-4&middot;a&middot;c))/2a</caption>
                     </table>
                 </p></div>
-
-                <div class="col-md-4">
-                    <p><table align="center" style="width:260px">
-                        <tr><th>L</th><th>T</th></tr>
-                        <tr><td>15</td><td>1</td></tr>
-                        <caption class="text-center">Período pendular:<br>T = 2&middot;&pi;&middot;&radic;(L/g)</caption>
-                    </table></p>
-                </div>
             </div>
 
             <div class="alert alert-info">
                 <p class="text-justify"><strong>Obs:</strong></p>
 
-                <p class="text-justify"><strong>Dica!</strong> Copie as tabelas, incluindo a linha com o nome das colunas, e use-as como rótulo na página inicial e veja o resultado!</p>
+                <p class="text-justify"><strong>Atenção!</strong>As tabelas para a equação de trabalho são diferentes (perceba que cos(&Theta;) é diferente de &Theta;)!</p>
                 
                 <p class="text-justify">- A página principal aceita separações por vírgulas, tabulações e espaços em branco, e ignora qualquer entrada que não seja um número.</p>
                 <p class="text-justify">- As linhas de entrada das funções são geradas assim que a página carrega, portanto uma entrada que você tenha usado antes talvez seja diferente, mas ainda vem da mesma expressão.</p>
