correção de bugs

--- a/study-notes.html
+++ b/study-notes.html
@@ -87,13 +87,13 @@
                 
             <br><p class="text-center"><i>identidade, seno, cosseno, tangente, valor absoluto, raiz quadrada, exponencial e logaritmo</i></p><br>
 
-            <p class="text-justify">Por se tratar da unidade elementar para construir todas as expressões lineares, esta estrutura deve ser interpretada como um número em função das variáveis explicativas. Seu valor numérico é calculado a partir de um valor do DATASET: primeiro, dado um conjunto X<sub>i</sub>, eleva-se cada um dos elementos de X<sub>i</sub> ao expoente e<sub>i</sub> (pertencente ao conjunto interno de expoentes). Após isso, todos estes expoentes são multiplicados e, por fim, a operação da estrutura é aplicada em cima do valor obtido:</p>
+            <p class="text-justify">Por se tratar da unidade elementar para construir todas as expressões lineares, esta estrutura deve ser interpretada como um número em função das variáveis explicativas. Seu valor numérico é calculado a partir de um valor do DATASET: primeiro, dado um conjunto X<sub>i</sub>, eleva-se cada um dos elementos de X<sub>i</sub> ao expoente e<sub>i</sub> (pertencente ao conjunto interno de expoentes). Após isso, todos os valores obtidos são multiplicados e, por fim, a operação da estrutura é aplicada em cima do valor obtido:</p>
 
             <p class="text-center"><img src="http://mathurl.com/yaahevps.png"></p>
 
             <p class="text-justify">Então cada expressão formada sempre será uma expressão linear (<img src="http://mathurl.com/ydb48h6c.png">) onde cada termo x<sub>i</sub> é uma estrutura IT multiplicada por um coeficiente.</p>
 
-            <p class="text-justify">A estrutura de dados IT possui limitações que impede que algumas funções nunca possam ser criadas. Todos os algoritmos se baseiam nessa estrutura de dados, e suas expressões são compostas somando várias estruturas IT. Tome como exemplo a estrutura IT para um problema de 3 variáveis, e sua correspondente forma matemática:</p>
+            <p class="text-justify">A estrutura de dados IT possui limitações que impede que algumas funções possam ser criadas. Todos os algoritmos se baseiam nessa estrutura de dados, e suas expressões são compostas somando várias estruturas IT. Tome como exemplo a estrutura IT para um problema de 3 variáveis, e sua correspondente forma matemática:</p>
 
             <br><p class="text-center"><img src="http://mathurl.com/yc46lhbw.png"></p><br>
 
