--- a/input-examples.html
+++ b/input-examples.html
@@ -78,7 +78,7 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>&rho;</th><th>&Delta;h</th><th>&Delta;P</th></tr>
                         <tr><td> 95 </td><td> 40 </td><td> 37266.6 </td></tr>
                         <tr><td> 40 </td><td> 35 </td><td> 13729.8 </td></tr>
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>m</th><th>E</th></tr>
                         <tr><td>50</td><td>4.4937759e+18</td></tr>
                         <tr><td>170</td><td>1.527883806e+19</td></tr>
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>b</th><th>h</th><th>I<sub>x</sub></th></tr>
                         <tr><td>90</td><td>30</td><td>202500.0</td></tr>
                         <tr><td>10</td><td>75</td><td>351562.5</td></tr>
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>k</th><th>&Delta;l</th><th>F</th></tr>
                         <tr><td>1.9</td><td>25</td><td>47.5</td></tr>
                         <tr><td>0.9</td><td>50</td><td>45.0</td></tr>
@@ -178,7 +178,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <p><table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>b</th><th>h</th><th>A</th></tr>
                         <tr><td>120</td><td>85</td><td>10200</td></tr>
                         <tr><td>80</td><td>40</td><td>3200</td></tr>
@@ -248,71 +248,7 @@
                         <tr><td>283</td><td>95</td><td>240</td><td>931.408196792</td></tr>
                         <tr><td>451</td><td>205</td><td>210</td><td>3660.60075281</td></tr>
                         <tr><td>94</td><td>230</td><td>110</td><td>1634.19644327</td></tr>
-                        <tr><td>437</td><td>185</td><td>20</td><td>33609.6837655</td></tr>
-                        <tr><td>409</td><td>250</td><td>160</td><td>5313.54778438</td></tr>
-                        <tr><td>255</td><td>170</td><td>30</td><td>12014.59411</td></tr>
-                        <tr><td>332</td><td>70</td><td>150</td><td>1288.20838347</td></tr>
-                        <tr><td>122</td><td>140</td><td>40</td><td>3550.333346</td></tr>
-                        <tr><td>66</td><td>235</td><td>90</td><td>1432.88238867</td></tr>
                         <caption class="text-center">Lei dos gases ideais:<br>P = n&middot;R&middot;T/v</caption>
-                    </table></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="page-header" id="impossible">
-            <h2>Funções incompatíveis</h2>
-
-            <p class="text-justify">Para entender melhor o motivo de algumas funções serem incompatíveis, a estrutura de dados utilizada pelos algoritmos é descrita nas <a href="./study-notes.html#IT">notas de estudo</a>.</p>
-
-            <div class="row">
-                <div class="col-lg-4"><p>
-                    <table align="center" style="width:195px">
-                        <tr><th>R<sub>1</sub></th><th>R<sub>2</sub></th><th>R<sub>t</sub></th></tr>
-                        <tr><td>10</td><td>10</td><td>5</td></tr>
-                        <tr><td>100</td><td>10</td><td>9.09</td></tr>
-                        <tr><td>100</td><td>50</td><td>1.96</td></tr>
-                        <tr><td>20</td><td>1000</td><td>19.61</td></tr>
-                        <tr><td>60</td><td>125</td><td>40.54</td></tr>
-                        <tr><td>20</td><td>30</td><td>12.0</td></tr>
-                        <tr><td>140</td><td>55</td><td>39.49</td></tr>
-                        <tr><td>130</td><td>135</td><td>66.23</td></tr>
-                        <tr><td>170</td><td>95</td><td>60.94</td></tr>
-                        <tr><td>40</td><td>60</td><td>24.0</td></tr>
-                        <tr><td>90</td><td>145</td><td>55.53</td></tr>
-                        <tr><td>30</td><td>35</td><td>16.15</td></tr>
-                        <tr><td>10</td><td>50</td><td>8.33</td></tr>
-                        <tr><td>80</td><td>115</td><td>47.18</td></tr>
-                        <tr><td>110</td><td>80</td><td>46.32</td></tr>
-                        <tr><td>100</td><td>75</td><td>42.86</td></tr>
-                        <tr><td>150</td><td>120</td><td>66.67</td></tr>
-                        <tr><td>180</td><td>105</td><td>66.32</td></tr>
-                        <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
-                    </table>
-                </p></div>
-
-                <div class="col-lg-4">
-                    <p><table align="center" style="width:195px">
-                        <tr><th>a</th><th>b</th><th>c</th></tr>
-                        <tr><td>148</td><td>25</td><td>150.096635539</td></tr>
-                        <tr><td>140</td><td>125</td><td>187.683243791</td></tr>
-                        <tr><td>52</td><td>40</td><td>65.6048778674</td></tr>
-                        <tr><td>132</td><td>10</td><td>132.378245947</td></tr>
-                        <tr><td>72</td><td>30</td><td>78.0</td></tr>
-                        <tr><td>92</td><td>100</td><td>135.882302012</td></tr>
-                        <tr><td>142</td><td>65</td><td>156.169779407</td></tr>
-                        <tr><td>80</td><td>20</td><td>82.4621125124</td></tr>
-                        <tr><td>10</td><td>70</td><td>70.7106781187</td></tr>
-                        <tr><td>44</td><td>130</td><td>137.244307714</td></tr>
-                        <tr><td>120</td><td>85</td><td>147.054411699</td></tr>
-                        <tr><td>68</td><td>75</td><td>101.237344888</td></tr>
-                        <tr><td>30</td><td>95</td><td>99.6242942259</td></tr>
-                        <tr><td>62</td><td>45</td><td>76.6093989012</td></tr>
-                        <tr><td>70</td><td>120</td><td>138.924439894</td></tr>
-                        <tr><td>32</td><td>135</td><td>138.740765458</td></tr>
-                        <tr><td>22</td><td>55</td><td>59.2368128785</td></tr>
-                        <tr><td>88</td><td>80</td><td>118.928549979</td></tr>
-                        <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>)</caption>
                     </table></p>
                 </div>
 
@@ -341,8 +277,91 @@
                     </table></p>
                 </div>
 
+                <div class="col-md-4">
+                    <p><table align="center" style="width:260px">
+                        <tr><th>x<sub>1</sub></th><th>x<sub>2</sub></th><th>x<sub>3</sub></th><th>m</th></tr>
+                        <tr><td>69</td><td>36</td><td>3</td><td>36.0</td></tr>
+                        <tr><td>31</td><td>24</td><td>2</td><td>19.0</td></tr>
+                        <tr><td>23</td><td>26</td><td>6</td><td>18.333</td></tr>
+                        <tr><td>65</td><td>31</td><td>17</td><td>37.667</td></tr>
+                        <tr><td>20</td><td>41</td><td>12</td><td>24.333</td></tr>
+                        <tr><td>49</td><td>11</td><td>1</td><td>20.333</td></tr>
+                        <tr><td>51</td><td>22</td><td>13</td><td>28.667</td></tr>
+                        <tr><td>63</td><td>15</td><td>7</td><td>28.333</td></tr>
+                        <tr><td>40</td><td>12</td><td>4</td><td>18.667</td></tr>
+                        <tr><td>30</td><td>45</td><td>15</td><td>30.0</td></tr>
+                        <tr><td>97</td><td>28</td><td>18</td><td>47.667</td></tr>
+                        <tr><td>11</td><td>14</td><td>16</td><td>13.667</td></tr>
+                        <tr><td>59</td><td>40</td><td>11</td><td>36.667</td></tr>
+                        <tr><td>46</td><td>13</td><td>14</td><td>24.333</td></tr>
+                        <tr><td>47</td><td>35</td><td>8</td><td>30.0</td></tr>
+                        <tr><td>95</td><td>48</td><td>9</td><td>50.667</td></tr>
+                        <tr><td>85</td><td>46</td><td>10</td><td>47.0</td></tr>
+                        <tr><td>34</td><td>19</td><td>5</td><td>19.333</td></tr>
+                        <caption class="text-center">Média:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
+                    </table></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="page-header" id="impossible">
+            <h2>Funções incompatíveis</h2>
+
+            <p class="text-justify">Para entender melhor o motivo de algumas funções serem incompatíveis, a estrutura de dados utilizada pelos algoritmos é descrita nas <a href="./study-notes.html#IT">notas de estudo</a>.</p>
+
+            <div class="row">
                 <div class="col-lg-4"><p>
-                    <table align="center" style="width:260px">
+                    <p><table align="center" style="width:260px">
+                        <tr><th>R<sub>1</sub></th><th>R<sub>2</sub></th><th>R<sub>t</sub></th></tr>
+                        <tr><td>10</td><td>10</td><td>5</td></tr>
+                        <tr><td>100</td><td>10</td><td>9.09</td></tr>
+                        <tr><td>100</td><td>50</td><td>1.96</td></tr>
+                        <tr><td>20</td><td>1000</td><td>19.61</td></tr>
+                        <tr><td>60</td><td>125</td><td>40.54</td></tr>
+                        <tr><td>20</td><td>30</td><td>12.0</td></tr>
+                        <tr><td>140</td><td>55</td><td>39.49</td></tr>
+                        <tr><td>130</td><td>135</td><td>66.23</td></tr>
+                        <tr><td>170</td><td>95</td><td>60.94</td></tr>
+                        <tr><td>40</td><td>60</td><td>24.0</td></tr>
+                        <tr><td>90</td><td>145</td><td>55.53</td></tr>
+                        <tr><td>30</td><td>35</td><td>16.15</td></tr>
+                        <tr><td>10</td><td>50</td><td>8.33</td></tr>
+                        <tr><td>80</td><td>115</td><td>47.18</td></tr>
+                        <tr><td>110</td><td>80</td><td>46.32</td></tr>
+                        <tr><td>100</td><td>75</td><td>42.86</td></tr>
+                        <tr><td>150</td><td>120</td><td>66.67</td></tr>
+                        <tr><td>180</td><td>105</td><td>66.32</td></tr>
+                        <caption class="text-center">Lei de Ohm:<br>R<sub>t</sub> = 1 / (1/R<sub>1</sub> + 1/R<sub>2</sub>)</caption>
+                    </table>
+                </p></div>
+
+                <div class="col-lg-4">
+                    <p><table align="center" style="width:260px">
+                        <tr><th>a</th><th>b</th><th>c</th></tr>
+                        <tr><td>148</td><td>25</td><td>150.096635539</td></tr>
+                        <tr><td>140</td><td>125</td><td>187.683243791</td></tr>
+                        <tr><td>52</td><td>40</td><td>65.6048778674</td></tr>
+                        <tr><td>132</td><td>10</td><td>132.378245947</td></tr>
+                        <tr><td>72</td><td>30</td><td>78.0</td></tr>
+                        <tr><td>92</td><td>100</td><td>135.882302012</td></tr>
+                        <tr><td>142</td><td>65</td><td>156.169779407</td></tr>
+                        <tr><td>80</td><td>20</td><td>82.4621125124</td></tr>
+                        <tr><td>10</td><td>70</td><td>70.7106781187</td></tr>
+                        <tr><td>44</td><td>130</td><td>137.244307714</td></tr>
+                        <tr><td>120</td><td>85</td><td>147.054411699</td></tr>
+                        <tr><td>68</td><td>75</td><td>101.237344888</td></tr>
+                        <tr><td>30</td><td>95</td><td>99.6242942259</td></tr>
+                        <tr><td>62</td><td>45</td><td>76.6093989012</td></tr>
+                        <tr><td>70</td><td>120</td><td>138.924439894</td></tr>
+                        <tr><td>32</td><td>135</td><td>138.740765458</td></tr>
+                        <tr><td>22</td><td>55</td><td>59.2368128785</td></tr>
+                        <tr><td>88</td><td>80</td><td>118.928549979</td></tr>
+                        <caption class="text-center">Teorema de pitágoras:<br>c = &radic;(a<sup>2</sup> + b<sup>2</sup>)</caption>
+                    </table></p>
+                </div>
+
+                <div class="col-lg-4"><p>
+                    <p><table align="center" style="width:260px">
                         <tr><th>F</th><th>&Delta;s</th><th>&Theta;</th><th>W</th></tr>
                         <tr><td>40</td><td>30</td><td>3.89</td><td>-879.328265823</td></tr>
                         <tr><td>10</td><td>20</td><td>5.25</td><td>102.417095448</td></tr>
@@ -367,7 +386,7 @@
                 </p></div>
 
                 <div class="col-lg-4"><p>
-                    <table align="center" style="width:195px">
+                    <p><table align="center" style="width:260px">
                         <tr><th>a</th><th>b</th><th>c</th><th>x0</th></tr>
                         <tr><td>6</td><td>42</td><td>19</td><td>-17.50115</td></tr>
                         <tr><td>17</td><td>54</td><td>13</td><td>-75.83945</td></tr>
@@ -388,7 +407,59 @@
                         <tr><td>3</td><td>20</td><td>11</td><td>-5.443941</td></tr>
                         <tr><td>16</td><td>26</td><td>1</td><td>-10.09092</td></tr>
                         <tr><td>8</td><td>48</td><td>5</td><td>-6.786609</td></tr>
-                        <caption class="text-center">Fórmula de Bhaskara:<br>(-b&#8723;&radic;(b<sup>2</sup>-4&middot;a&middot;c))/2a</caption>
+                        <caption class="text-center">Fórmula de Bhaskara:<br>x0 = (-b&#8723;&radic;(b<sup>2</sup>-4&middot;a&middot;c))/2a</caption>
+                    </table>
+                </p></div>
+
+                <div class="col-lg-4"><p>
+                    <p><table align="center" style="width:260px">
+                        <tr><th>a</th><th>b</th><th>e</th></tr>
+                        <tr><td>38</td><td>18</td><td>0.880694764773</td></tr>
+                        <tr><td>34</td><td>5</td><td>0.989127748282</td></tr>
+                        <tr><td>22</td><td>4</td><td>0.983332166036</td></tr>
+                        <tr><td>30</td><td>17</td><td>0.823947139621</td></tr>
+                        <tr><td>26</td><td>10</td><td>0.923076923077</td></tr>
+                        <tr><td>48</td><td>19</td><td>0.918322368356</td></tr>
+                        <tr><td>39</td><td>9</td><td>0.973008510821</td></tr>
+                        <tr><td>12</td><td>11</td><td>0.399652626943</td></tr>
+                        <tr><td>37</td><td>13</td><td>0.936243679767</td></tr>
+                        <tr><td>35</td><td>15</td><td>0.903507902905</td></tr>
+                        <tr><td>14</td><td>14</td><td>0.0</td></tr>
+                        <tr><td>16</td><td>8</td><td>0.866025403784</td></tr>
+                        <tr><td>47</td><td>1</td><td>0.999773627615</td></tr>
+                        <tr><td>11</td><td>7</td><td>0.77138921584</td></tr>
+                        <tr><td>23</td><td>16</td><td>0.718378767037</td></tr>
+                        <tr><td>41</td><td>6</td><td>0.98923413613</td></tr>
+                        <tr><td>32</td><td>2</td><td>0.998044963917</td></tr>
+                        <tr><td>18</td><td>3</td><td>0.986013297183</td></tr>
+                        <tr><td>13</td><td>12</td><td>0.384615384615</td></tr>
+                        <caption class="text-center">Excentricidade da elipse:<br>e = &radic;(1 - b<sup>2</sup>/a<sup>2</sup>)</caption>
+                    </table>
+                </p></div>
+
+                <div class="col-lg-4"><p>
+                    <p><table align="center" style="width:260px">
+                        <tr><th>&Delta;t</th><th>v</th><th>&Delta;t'</th></tr>
+                        <tr><td>494000</td><td>140000</td><td>494000.053866</td></tr>
+                        <tr><td>245000</td><td>110000</td><td>245000.016492</td></tr>
+                        <tr><td>76000</td><td>158000</td><td>76000.010555</td></tr>
+                        <tr><td>191000</td><td>143000</td><td>191000.021729</td></tr>
+                        <tr><td>143000</td><td>93000</td><td>143000.006881</td></tr>
+                        <tr><td>259000</td><td>97000</td><td>259000.013557</td></tr>
+                        <tr><td>272000</td><td>49000</td><td>272000.003633</td></tr>
+                        <tr><td>10000</td><td>121000</td><td>10000.0008145</td></tr>
+                        <tr><td>126000</td><td>127000</td><td>126000.011306</td></tr>
+                        <tr><td>79000</td><td>103000</td><td>79000.0046626</td></tr>
+                        <tr><td>246000</td><td>40000</td><td>246000.00219</td></tr>
+                        <tr><td>123000</td><td>69000</td><td>123000.003258</td></tr>
+                        <tr><td>177000</td><td>48000</td><td>177000.002269</td></tr>
+                        <tr><td>49000</td><td>105000</td><td>49000.0030054</td></tr>
+                        <tr><td>453000</td><td>106000</td><td>453000.028316</td></tr>
+                        <tr><td>279000</td><td>167000</td><td>279000.043288</td></tr>
+                        <tr><td>491000</td><td>96000</td><td>491000.025174</td></tr>
+                        <tr><td>236000</td><td>29000</td><td>236000.001104</td></tr>
+                        <tr><td>168000</td><td>198000</td><td>168000.036641</td></tr>
+                        <caption class="text-center">Dilatação do tempo:<br>&Delta;t' = &Delta;t/&radic;(1 - v<sup>2</sup>/c<sup>2</sup>)</caption>
                     </table>
                 </p></div>
             </div>
