novo form de feedback

--- a/changelog.html
+++ b/changelog.html
@@ -58,6 +58,9 @@
 
             <p class="text-justify"><b>14/12/2017</b></p>
             <p class="text-justify"> - Novas tabelas de teste.</p>
+            <p class="text-justify"> - Tabelas na versão em inglês adicionadas.</p>
+            <p class="text-justify"> - Remoção dos links de imagem inseguros.</p>
+            <p class="text-justify"> - Novo formulário de feedback.</p>
 
             <p class="text-justify"><b>13/12/2017</b></p>
             <p class="text-justify"> - Revisão no código SymTree.</p>
