--- a/feedback.html
+++ b/feedback.html
@@ -48,16 +48,16 @@
 
     <section id="bodyContent" class="well">
         
-        <div id="form">
+        <div class="page-header" id="form">
 
             <h2>Conte-nos o que achou do site!</h2>
 
             <p class="text-justify">
-                É importante para nós termos um registro da opinião das pessoas que utilizaram o site. Este formulário não leva nem 2 minutos para ser preenchido!
+                
             </p>
 
             <p class="text-center">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScejB3rrSJUKhIZSp4sgypwXzJrRb4XFoxgArx_-vLZMMzQSw/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfD7LBgsV5N0jyHMVk1D49F1p0LCgcK5-fH1GvZwBDtPzsTIw/viewform?embedded=true" width="760" height="1250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </p>
         </div>
 
