--- a/input-examples.html
+++ b/input-examples.html
@@ -298,7 +298,7 @@
                         <tr><td>95</td><td>48</td><td>9</td><td>50.667</td></tr>
                         <tr><td>85</td><td>46</td><td>10</td><td>47.0</td></tr>
                         <tr><td>34</td><td>19</td><td>5</td><td>19.333</td></tr>
-                        <caption class="text-center">Média simples:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
+                        <caption class="text-center">Média aritmética simples:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
                     </table></p>
                 </div>
             </div>
