--- a/study-notes.html
+++ b/study-notes.html
@@ -58,7 +58,7 @@
 
     <section id="bodyContent" class="well">
         
-        <div id="notas">
+        <div class="page-header" id="notas">
             <h2>Notas de estudo</h2>
 
             <h3 id="regression" class="text-center">O problema de regressão</h3>
