--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style/style.css">
 
-	<title>Assistente de Laboratório: Regressão Simbólica para Funções simples</title>
+    <title>Assistente de Laboratório: Regressão Simbólica para Funções simples</title>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111333999-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-111333999-1');
+    </script>
+
 </head>
 
 <nav class="navbar navbar-inverse navbar-fixed-top"> <!--NAVBAR-->
