mais linhas de dados nas tabelas de exemplo

--- a/performance-test.html
+++ b/performance-test.html
@@ -85,6 +85,10 @@
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_regression_d('ITES')">Algoritmo IT-ES (Interaction Transformation Evolution Strategies)</button>
                 </p>
 
+                <div id="myProgress">
+                    <div id="myBar"></div>
+                </div>
+
                 <div id="results">
                 </div>
             </div>
