--- a/changelog.html
+++ b/changelog.html
@@ -56,6 +56,9 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>21/12/2017</b></p>
+            <p class="text-justify"> -Mais linhas de entradas nos algoritmos de exemplo.</p>
+
             <p class="text-justify"><b>18/12/2017</b></p>
             <p class="text-justify"> - Página de teste de performance dos algoritmos.</p>
             <p class="text-justify"> - Contagem do tempo de execução.</p>
