mais informações na página de testes

--- a/performance-test.html
+++ b/performance-test.html
@@ -43,7 +43,7 @@
             <div class="page-header">
                 <h2>Entrada de dados</h2>
 
-                <p class="text-justify">Os dados podem ser digitados manualmente, ou você pode fazer o upload de um arquivo <strong>.csv</strong> contendo seus dados. Caso queira, a primeira linha pode ser usada para nomear as variáveis. No site há uma página mais elaborada sobre os <a href=".\input-examples.html">dados de entrada</a>;</p>
+                <p class="text-justify">Pagina dedicada a medir o desempenho do algoritmo. Ao inserir os dados e selecionar um algoritmo, um script irá executá-lo 30 vezes, calculando seu desempenho médio e possibilitando uma análise geral do comportamento para a série de dados. <strong>O processamento dos dados é lento</strong>.</p>
                 <div class="row">
                     <div class="col-lg-6">
                         <h4>Entrada manual de dados</h4>
